--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <input type="text"  id="weight" placeholder="60">
                 </div>
                 <div class="input-wrapper">
-                    <label for="height">Altura (m)</label>
+                    <label for="height">Altura (cm)</label>
                     <input type="text"  id="height" placeholder="165">
                 </div>
                 <button>Calcular IMC <img src="./assets/arrow-right.svg" alt="Seta para Direita"></button>
